Remove db from GitHub

--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   "scripts": {
     "postinstall": "bower install",
     "prestart": "npm install",
-    "start": "http-server -a localhost -p 8000",
+    "start": "node server/index.js",
     "pretest": "npm install",
     "test": "karma start test/karma.conf.js",
     "test-single-run": "karma start test/karma.conf.js  --single-run",
