--- a/bower.json
+++ b/bower.json
@@ -10,6 +10,13 @@
     "angular-route": "1.2.x",
     "angular-loader": "1.2.x",
     "angular-mocks": "~1.2.x",
-    "html5-boilerplate": "~4.3.0"
+    "html5-boilerplate": "~4.3.0",
+    "bootstrap-multiselect": "~0.9.8",
+    "bootstrap": "~3.2.0",
+    "angular-sanitize": "~1.2.22",
+    "angular-cookies": "~1.2.22",
+    "angular-animate": "~1.2.22",
+    "jquery": "~2.1.1",
+    "angular-resource": "~1.2.22"
   }
 }
