--- a/bower.json
+++ b/bower.json
@@ -17,6 +17,7 @@
     "angular-cookies": "~1.2.22",
     "angular-animate": "~1.2.22",
     "jquery": "~2.1.1",
-    "angular-resource": "~1.2.22"
+    "angular-resource": "~1.2.22",
+    "kendo-ui": "~2014.2.716"
   }
 }
