--- a/package.json
+++ b/package.json
@@ -11,18 +11,18 @@
     "sequelize": "^1.7.9",
     "sqlite3": "^2.2.7",
     "body-parser": "^1.6.3",
-    "cookie-parser": "^1.3.2"
+    "cookie-parser": "^1.3.2",
+    "bower": "^1.3.1"
   },
   "devDependencies": {
     "karma": "~0.12",
     "protractor": "~0.20.1",
     "http-server": "^0.6.1",
-    "bower": "^1.3.1",
     "shelljs": "^0.2.6",
     "karma-junit-reporter": "^0.2.2"
   },
   "scripts": {
-    "postinstall": "bower install",
+    "postinstall": "./node_modules/bower/bin/bower install",
     "prestart": "npm install",
     "start": "node server/index.js",
     "pretest": "npm install",
