--- a/bower.json
+++ b/bower.json
@@ -6,7 +6,7 @@
   "license": "MIT",
   "private": true,
   "dependencies": {
-    "angular": "~1.3.0-beta.18",
+    "angular": "1.3.0-beta.19",
     "angular-route": "1.2.x",
     "angular-loader": "1.2.x",
     "angular-mocks": "~1.2.x",
@@ -18,7 +18,6 @@
     "angular-animate": "~1.2.22",
     "jquery": "~2.1.1",
     "angular-resource": "~1.2.22",
-    "kendo-ui": "~2014.2.716",
-    "angular-messages": "~1.3.0-beta.18"
+    "kendo-ui": "~2014.2.716"
   }
 }
